0.16.2
 - fix: escape html characters in logging panel
0.16.1
 - fix: generally increase timeout for package_revise
0.16.0
 - feat: check for updates when starting the DCOR-Aid GUI
 - fix: when checking resource existence for a dataset, do not call
   "package_show" for every single resource
 - fix: use `verifiable_files` instead of `verified_files` in error message
   before verifying messages
 - fix: possible exception during upload verification with flaky connection
 - enh: increase timeout for "package_show" in `UploadJob` to 500 s
 - ref: renamed `resource_dict` to `check_resource_dict` in `resource_exists`
 - ref: add optional `dataset_dict` to `resource_exists`
0.15.5
 - fix: downloads tab became unresponsive for > 100 downloads
0.15.4
 - fix: check for already uploaded resources before attempting to compress
 - fix: timeout parameter not passed to `CKANAPI.get`
0.15.3
 - fix: check whether dataset is activated before activating it
 - fix: timeout after 500 s in dataset_activate in case
   the server is under heavy load
0.15.2
 - setup: false dclab dependency version
0.15.1
 - fix: fall-back to ETag verification when downloading resources for
   which no SHA256 sum exists
 - fix: set error message before publishing download job error state
 - enh: check for external links before upload
 - setup: bump dclab from 0.60.0 to 0.62.0
 - ref: reduce logging level for SSL verification
0.15.0
 - setup: bump dclab from 0.58.7 to 0.60.0 (internal basins support)
0.14.2
 - fix: avoid error in upload tab when no jobs are present
 - enh: add logging tab in GUI
 - docs: improve doc strings
 - ref: improve logging
 - tests: reduce segmentation faults during testing (#14)
 - setup: bump dclab from 0.58.5 to 0.58.7
0.14.1
 - setup: fix build pipeline (remove editable install)
0.14.0
 - feat: support new DCOR API for uploading data directly to S3
 - feat: perform faster ETag verification instead of SHA256 summing
 - enh: add api.errors.APIBadRequest error class